--- a/_portfolio/graduate.html
+++ b/_portfolio/graduate.html
@@ -1,6 +1,6 @@
 ---
 title: "2024届毕业生"
-excerpt: "人工智能专业毕业生名单 <br/><img src='/images/500x300.png'>"
+excerpt: "人工智能专业毕业生名单 <br/><img src='/resources/01.jpg'>"
 collection: portfolio
 ---
 
